--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.9.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "i18next": "^21.8.14",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
