--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "i18next": "^21.8.14",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.18.1",
+    "react-loading-spin": "^2.1.9",
     "react-router-dom": "^6.3.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.7",
